<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editNumberOfPeople"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:contentDescription="@string/vamos_rachar_banner"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banner_vamos_rachar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/vamos_rachar_title"
        android:textColor="@android:color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        android:contentDescription="@string/vamos_rachar_title_descripition"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintVertical_bias="0.936" />

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:hint="@string/insira_o_valor_total"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <EditText
        android:id="@+id/edtConta"
        android:autofillHints=""
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black"
        android:hint="@string/insira_o_n_mero_de_pessoas"
        android:inputType="number"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/editPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/valor_default"
        android:contentDescription=""
        android:textColor="@color/white"
        android:textSize="33sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtConta" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingTTSButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:clickable="true"
        android:contentDescription="@string/falar_valor_em_voz_alta"
        app:layout_constraintEnd_toStartOf="@id/floatingSharingButton"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result"
        app:srcCompat="@android:drawable/ic_btn_speak_now" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingSharingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="80dp"
        android:clickable="true"
        android:contentDescription="@string/compartilhar_valor_a_ser_pago"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result"
        app:srcCompat="?attr/actionModeShareDrawable" />

</androidx.constraintlayout.widget.ConstraintLayout>